--- a/.envrc-example
+++ b/.envrc-example
@@ -1,2 +1,3 @@
 export PYTHONDONTWRITEBYTECODE=1
 export PYTHONUNBUFFERED=1
+export DATABASE_URL="postgresql://user:password@localhost:5433/my_project_dev"
